<resources>
    <string name="app_name">SakuraVN</string>
    <string name="app_title">Whispers of the Sakura</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register">Register Here!</string>
    <string name="account">Already have an account?</string>
    <string name="login">Login Here!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>