<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/rooftop_garden"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/sakuraLogo"
        android:layout_width="235dp"
        android:layout_height="216dp"
        app:srcCompat="@drawable/sakura" />

    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/userInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/input_box"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:textColorHint="@color/gray"
        android:ems="15"
        android:hint="Email / Username"/>

    <EditText
        android:id="@+id/userPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/input_box"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:textColorHint="@color/gray"
        android:ems="15"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="LOGIN" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/no_account" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>
